增加修改内容

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
   email            : "yuqizhao@whu.edu.cn"
-  researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
+  researchgate     :  "https://www.researchgate.net/profile/Henry_Zhao5"
   uri              :
   bitbucket        :
   codepen          :
@@ -37,8 +37,8 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : # e.g., "github username"
-  google_plus      :
+  github           :    "henryzhao"
+  google_plus      :    "zhaoyuqi54"
   keybase          :
   instagram        :
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
