--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@
 title                    : "Zhixuan Wang"
 description              : "Stay Hungry! Stay Foolish!"
 repository               : "VM1MV/VM1MV.github.io"
+url                      : "https://vm1mv.github.io" 
 google_scholar_stats_use_cdn : true
 
 # google analytics
@@ -22,14 +23,14 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Zhixuan Wang"
-  avatar           : "images/android-chrome-512x512.png"
+  avatar           : "images/android-chrome-192x192.png"
   bio              : "Central China Normal University"
   location         : "Wuhan, China"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
   email            : "wangzhixuan@mails.ccnu.edu.cn"
-  researchgate     :  "https://www.researchgate.net/profile/Henry_Zhao5"
+  # researchgate     :  "https://www.researchgate.net/profile/Henry_Zhao5"
   uri              :
   bitbucket        :
   codepen          :
