--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,6 +15,9 @@ main:
   - title: "Educations"
     url: "/#-educations"
 
+  - title: "AAA"
+    url: "/#-aaa"
+
   # - title: "Invited Talks"
   #   url: "/#-invited-talks"
 
